# dog

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  batch.yaml  dog-server.err.txt  dog-server.out.txt  dog.yaml  install.sh  justfile  ord.yaml  splits.yaml
.claude/: settings.local.json
crates/doginals/: Cargo.toml
crates/doginals/src/: epoch.rs  koinu.rs
crates/mockcore/: Cargo.toml
crates/ordinals/: Cargo.toml
deploy/: dog.service  ord.service  setup
docs/: comparison-with-ord-dogecoin.md  comparison-with-wonky-dogeord.md
docs/po/: ar.po  de.po  es.po  fil.po  fr.po  hi.po  (+7 more)
examples/: koinu-relic-auto-theme.html  koinu-relic-option-a.html
fuzz/: Cargo.toml
koinu-relic/: relic.html
src/: api.rs  arguments.rs  chain.rs  dunes.rs  error.rs  index.rs  koinucard.rs  lib.rs  object.rs  options.rs  outgoing.rs  re.rs  representation.rs  settings.rs  subcommand.rs  templates.rs  test.rs  wallet.rs
static/: index.css  index.js  koinu-relic-auto-theme.html  wallet.js
templates/: address.html  block.html  dune-not-found.html  dune.html  inscription.html  koinu-relics.html  koinu.html  koinucard.html  monitor.html  output.html  page.html  rune-balances.html  runes.html  sat.html  satscard.html  status.html  transaction.html
tests/: balances.rs  command_builder.rs  decode.rs  dunes.rs  epochs.rs  find.rs  index.rs  info.rs  json_api.rs  lib.rs  list.rs  parse.rs  server.rs  settings.rs  subsidy.rs  test_server.rs  traits.rs  version.rs  wallet.rs
web-ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+193 files in other folders)
